testsuite/tests/indexed-types/should_compile/ClosedFam1a.hs
module ClosedFam1a where

import {-# SOURCE #-} ClosedFam1
