testsuite/tests/indexed-types/should_fail/HsBootFam.hs
module HsBootFam where

import {-# SOURCE #-} HsBootFam_aux
